bynkc/tests/fixtures/positive/22_if_else_if/input.karn
commons test {
  fn classify(n: Int) -> String {
    if n < 10 {
      "small"
    } else if n < 100 {
      "medium"
    } else {
      "large"
    }
  }
}
