bynkc/tests/fixtures/negative/18_if_non_bool_cond/input.karn
commons test {
  fn f(n: Int) -> Int {
    if n {
      1
    } else {
      2
    }
  }
}
